--- a/src/main/webapp/app/shared/forms/event-detail-form/event-detail-form.component.html
+++ b/src/main/webapp/app/shared/forms/event-detail-form/event-detail-form.component.html
@@ -60,7 +60,7 @@
             [ngValue]="eventTypeOption.id === editForm.get('category')!.value?.id ? editForm.get('category')!.value : eventTypeOption"
             *ngFor="let eventTypeOption of categoriesCollection; trackBy: trackEventTypeById"
         >
-          {{ eventTypeOption.id }}
+          {{ eventTypeOption.description }}
         </option>
       </select>
     </div>
@@ -74,7 +74,7 @@
               "
             *ngFor="let checkPointOption of checkPointsCollection; trackBy: trackCheckPointById"
         >
-          {{ checkPointOption.id }}
+          {{ checkPointOption.friendlyname }}
         </option>
       </select>
     </div>
@@ -86,7 +86,7 @@
             [ngValue]="operatorOption.id === editForm.get('operator')!.value?.id ? editForm.get('operator')!.value : operatorOption"
             *ngFor="let operatorOption of operatorsCollection; trackBy: trackOperatorById"
         >
-          {{ operatorOption.id }}
+          {{ operatorOption.kindOfOperator }}
         </option>
       </select>
     </div>
