--- a/src/main/webapp/app/entities/first-registration/update/first-registration-new.component.html
+++ b/src/main/webapp/app/entities/first-registration/update/first-registration-new.component.html
@@ -1,6 +1,6 @@
 <div class="d-flex justify-content-center">
   <div class="col-8">
-    <h2 id="jhi-event-heading" data-cy="EventCreateUpdateHeading" jhiTranslate="albatestApp.event.home.createOrEditLabel">
+    <h2 id="jhi-event-heading" data-cy="EventCreateUpdateHeading">
       First registration
     </h2>
     <nav ngbNav #nav="ngbNav" class="nav-tabs">
